@@ -30,7 +30,7 @@ gravity-coin=[font=heading-1][color=purple]TIER 2 COIN[.color][.font]\nCan be tr
 meteor-coin=[font=heading-1][color=cyan]TIER 3 COIN[.color][.font]\nCan be traded. Primarily used on [planet=aquilo].\n\nSymbolizes your ability to ward off large asteroids on your way to a distant planet.\n\nAuto-converted to higher or lower tiers as needed:\n[img=item.hex-coin]x100,000 <--> [img=item.gravity-coin]x1\n[img=item.gravity-coin]x100,000 <--> [img=item.meteor-coin]x1\n[img=item.meteor-coin]x100,000 <--> [img=item.hexaprism-coin]x1
 hexaprism-coin=[font=heading-1][color=blue]TIER 4 COIN[.color][.font]\nCan be traded. [color=cyan]+1000% to Bragging Rights.[.color]\n\nAuto-converted to lower tiers as needed:\n[img=item.hex-coin]x100,000 <--> [img=item.gravity-coin]x1\n[img=item.gravity-coin]x100,000 <--> [img=item.meteor-coin]x1\n[img=item.meteor-coin]x100,000 <--> [img=item.hexaprism-coin]x1
 hexaprism=A crystalline shard of pure hexagonal energy. Only the most experienced engineer can make use of this.
-claim-tool=Claim all hex cores in the selected area.
+claim-tool=Enqueue [entity=hex-core] hex cores in the selected area to be claimed.\n\n__CONTROL__reverse-select__: Dequeue\n__CONTROL__alt-reverse-select__: Include hexes without [entity=hex-core] hex cores
 delete-core-tool=Delete all hex cores in the selected area.
 hexport-tool=Enable all hexports in the selected area, or disable by reverse-selecting (RMB and drag).
 disintegrator-capsule=Deploys disintegrators to melt through your obstacles.
