@@ -3,6 +3,7 @@ Version: 1.3.6
 Date: 11/12/25
   Minor Features:
     - Added item buffs for locomotives and cargo wagons.
+    - Extended the functionality of the claim tool: Hold shift while selecting to also try to claim hexes that don't have hex cores yet (but will when intermediate hexes get claimed), and use RMB to remove hexes from the claim queue.
   Changes:
     - Unvisited surfaces no longer have an entry in the JSON trades export.
     - The clear filters button in the trade overview now leaves your planet filters alone unless all planets are toggled off.
